--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,38 @@
+/1.txt
 /2.txt
-/net
-/nebula-3840x2160-space-stars-andromeda-5504.jpg
-/~ps78AA.tmp
+/OpenAL32.dll
+/OpenAL64.dll
+/bg.png
+/characterRunLeft.png
+/characterRunRight.png
+/finish.png
+/floor.png
+/ibxm.jar
+/items.txt
+/jinput-dx8.dll
+/jinput-dx8_64.dll
+/jinput-raw.dll
+/jinput-raw_64.dll
+/jinput.jar
+/jnlp.jar
+/jogg-0.0.7.jar
+/jorbis-0.0.15.jar
+/jumpButton.png
+/lwjgl.dll
+/lwjgl.jar
+/lwjgl64.dll
+/lwjgl_util.jar
+/lwjgl_util_applet.jar
+/natives-linux.jar
+/natives-mac.jar
+/natives-windows.jar
 /nebula.png
+/net
+/saw.png
+/slick-examples.jar
+/slick.jar
+/switchDirLeft.png
+/switchDirRight.png
+/tinylinepp.jar
+/GoodDog.otf
+/Roman SD.ttf
