Fixed game editor bug
Changed coin to clock

--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="src" path="interface"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Lookout--master/lwjgl"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Lookout-/lwjgl"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/ibxm.jar"/>
